# coursework

./: Cargo.toml
benches/: my_benchmark.rs
conv_rust/: Cargo.toml
conv_rust/src/: main.rs
python_part/: conv.py
scripts/: arch.py  conv_torch_comp.py  test.py
src/: main.rs
src/blocks/: attn.rs  btb.rs  down.rs  downblock.rs  ff.rs  mid.rs  mod.rs  resnet.rs  trans.rs  up.rs  upblock.rs
src/func/: functions.rs
src/layers/: act.rs  conv.rs  downsample.rs  dropout.rs  layer.rs  linear.rs  mod.rs  norm.rs  params.rs  upsample.rs
src/main_parts/: mod.rs  unet.rs
