[package]
name = "SDXL"
version = "0.1.0"
edition = "2021"

[dependencies]
cudarc = { version = "0.12.1", features = ["cuda-version-from-build-system", "cudnn"] }
safetensors = "0.4.5"
bytemuck = "1.7"
rand = "0.8.5"
rand_distr = "0.4.3"
ndarray = "0.16.1"
statrs = "0.18.0"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "my_benchmark"
harness = false
